--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,10 +35,13 @@
 
     <TextView
         android:id="@+id/txt_result"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:textSize="20sp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginLeft="20dp"
+        android:textAlignment="center"
         tools:text="Esse texto não aparece no app"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
